syntax = "proto3";
option go_package = "pb/sys";

package sys;

service User {
  rpc create(UserCreateReq) returns(UserCreateResp);//创建用户信息
  rpc index(UserIndexReq) returns(UserIndexResp);
  rpc update(UserUpdateReq) returns(Response);//更新用户基本数据
  rpc read(UserReadReq) returns(UserReadResp);//获取用户信息
  rpc delete(UserDeleteReq) returns(Response);//刪除用戶
  rpc login(LoginReq) returns(LoginResp);
  rpc checkToken(CheckTokenReq) returns(CheckTokenResp);
}
//用户属性信息
message UserInfo{
  int64  uid = 1;
  string userName =2;
  string password = 3;
  string email = 4;
  string phone =5;
  string wechat = 6;
  string lastIP =7;
  string regIP =8;
  string nickName =9;
  string city =10;
  string country =11;
  string province =12;
  string language =13;
  string headImgUrl =14;
  int64  createdTime =15;
  int64  role = 16;
  int64  sex =17;
}

message UserCreateReq{
  string reqType = 1;//注册方式 phone|wxopen|wxin|wxminip|password| -> phone手机号注册 wxopen 微信开放平台登录 wxin 微信内登录 wxminip 微信小程序 密码方式 password 账密方式
  string userName = 2;//手机号注册时填写手机号 或者用户账号
  string password = 3;//明文密码
  UserInfo info = 4;
}

message UserCreateResp{
  int64 uid = 1;//用户id
}

message CheckTokenReq{
  string token = 1;
  string ip = 2;
}

message CheckTokenResp{
  string token = 1;  //如果时间不多会更新jwt，需要判断jwt是否为“” 如果不为空，则需要更新用户的token
  int64 uid = 2;
}

message PageInfo{
  int64 page = 1;
  int64 size = 2;
}

message UserIndexReq{
  PageInfo page       = 1;//分页信息 只获取一个则不填 搜索的字段: uid:用户id userName:登录用户名  email:邮箱  phone:手机号
  string userName = 2;
  string phone = 3;
  string email = 4;
}

message UserIndexResp{
  repeated UserInfo info = 1;
  int64 total = 2;
}

message UserUpdateReq{
  int64  uid = 1;
  string userName =2;
  string email = 3;
  string phone =4;
  string wechat = 5;
  string nickName =6;
  string city =7;
  string country =8;
  string province =9;
  string language =10;
  string headImgUrl =11;
  int64  sex =12;
}

message UserReadReq{
  int64 uid=1;
}

message UserReadResp{
  int64  uid = 1;
  string userName =2;
  string email = 3;
  string phone =4;
  string wechat = 5;
  string lastIP =6;
  string regIP =7;
  string nickName =8;
  string city =9;
  string country =10;
  string province =11;
  string language =12;
  string headImgUrl =13;
  int64  createdTime =14;
  int64  role = 15;
  int64  sex =16;
}
message UserDeleteReq{
  int64 uid = 1;
}

message JwtToken{
  string accessToken = 1;
  int64 accessExpire = 2;
  int64 refreshAfter = 3;
}

message LoginReq{
    string userID = 1; //登录账号(支持用户名,手机号登录) 账号密码登录时需要填写
    int32 pwdType = 2;//账号密码登录时需要填写.0,无密码 1，明文 2，md5加密
    string password =3;//密码，建议md5转换 密码登录时需要填写
    string loginType =4;//验证类型 sms 短信验证码 pwd 图形验证码加账号密码登录 wxopen 微信开放平台登录 wxin 微信内登录 wxmini 微信小程序
    string code = 5;//验证码    微信登录填code
    string codeID = 6;//验证码编号 微信登录填state
}

message LoginResp{
  UserInfo info = 1;
  JwtToken token =2;
}

message Response {
}



